--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         <span>
         <img src="Imagens/build.png" alt="Selo Rocketset" />
         </span>
-        <img src="/Imagens/foto minha" alt="Foto pessoal" />
+        <img src="/Imagens/foto-minha.png" alt="Foto pessoal" />
       </div>
       
     <h1>Carlos</h1>
     <a href="https://www.instagram.com/carlosadaaguiar/"></a>
-      <img src="Imagens/git hub.png" alt="Icone  git hub" />
+      <img src="Imagens/github.png" alt="Icone  git hub" />
       carlosadaaguiar</a>
       <p>
-        An instructor focused on helping pople start programming for web  
+        Desenvolvedor web Júnior
       </p>
 
       <ul> 
@@ -41,7 +41,7 @@
         </li>
         <li>
           <a href="https://www.instagram.com/carlosadaaguiar/" target="_blank">
-          <img src="/Imagens/Group 6424.png" alt="incone instagram" /> 
+          <img src="/Imagens/instagram.png" alt="incone instagram" /> 
         </li>
       </ul>
     </div>
