--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       <div class="conteiner">
       <div class="avatar">
         <span>
-        <img src="Imagens/build.png" alt="Selo Rocketset" />
+        <img src="./Imagens/build.png" alt="Selo Rocketset" />
         </span>
-        <img src="/Imagens/foto-minha.png" alt="Foto pessoal" />
+        <img src="./Imagens/foto-minha.png" alt="Foto pessoal" />
       </div>
       
     <h1>Carlos</h1>
     <a href="https://www.instagram.com/carlosadaaguiar/"></a>
-      <img src="Imagens/github.png" alt="Icone  git hub" />
+      <img src="./Imagens/github.png" alt="Icone  git hub" />
       carlosadaaguiar</a>
       <p>
         Desenvolvedor web Júnior
@@ -37,11 +37,11 @@
       <ul> 
         <li>
           <a href="https://www.youtube.com/channel/UC80DFLpImwrgTXkEqaIbWLg" target="_blank">
-          <img src="/Imagens/6564523.png" alt=" incone youtube"/> 
+          <img src="./Imagens/6564523.png" alt=" incone youtube"/> 
         </li>
         <li>
           <a href="https://www.instagram.com/carlosadaaguiar/" target="_blank">
-          <img src="/Imagens/instagram.png" alt="incone instagram" /> 
+          <img src="./Imagens/instagram.png" alt="incone instagram" /> 
         </li>
       </ul>
     </div>
