--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Cartão</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
   
     <link rel="preconnect" href="https://fonts.googleapis.com" >
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,700&display=swap" 
     rel="stylesheet">
 
-    <link rel="shortcut icon" href="/Imagens/cartao.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./Imagens/cartao.jpg" type="image/x-icon">
 
   </head>
   <body>
